changes Videojoc class